# AI-Assignments

./: README.md
hw1/: HW1.ipynb  Homework1_ Linear Regression.docx  pyproject.toml  readme.docx
hw2/: mse_gridsearch.html  pyproject.toml
hw2/.virtual_documents/: Homework2.ipynb
hw3/: hw3.ipynb  pyproject.toml
hw4/: hw4.ipynb  pyproject.toml
