[tool.poetry]
name = "homework 1"
version = "0.1.0"
description = ""
authors = ["Luis Gascon <luis.gcodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
jupyterlab = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
