[tool.poetry]
description = ""
authors = ["Luis Gascon <luis.gcodes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
torch = "^2.2.1"
torchvision = "^0.17.1"
plot-utils = "^0.6.14"
plotly = "^5.20.0"
kaleido = "0.2.1"
ipykernel = "^6.29.3"
nbformat = "^5.10.3"
ipywidgets = "^8.1.2"
jupyterlab = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
