[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Luis Gascon <luis.gcodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
jupyterlab = "^4.1.5"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
opencv-python = "^4.9.0.80"
imutils = "^0.5.4"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
