[tool.poetry]
name = "hw4"
version = "0.1.0"
description = ""
authors = ["Luis Gascon <luis.gcodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
